--- a/html/style/default.css
+++ b/html/style/default.css
@@ -1,28 +1,3 @@
-/*width of the content container and skew radius*/
-@media(min-aspect-ratio:9/5){
-	body{
-		--content-width:calc(100vw - 100vh);
-		--skewr:45deg;
-	}
-}
-@media(max-aspect-ratio:9/5){
-	body{
-		--content-width:calc(100vw - 50vh);
-		--skewr:22.5deg;
-	}
-}
-@media(max-aspect-ratio:1/1){
-	body{
-		--content-width:calc(100vw - 25vh);
-		--skewr:11.25deg;
-	}
-}
-@media(max-aspect-ratio:2/3){
-	body{
-		--content-width:90vw;
-		--skewr:0deg;
-	}
-}
 @keyframes load-in{
 	0%{width:0%}
 	100%{width:var(--content-width)}
@@ -55,48 +30,10 @@ body{
 	--lnk_h:#6AC;
 	--lnk:#418BA4;
 	color:var(--acc);
+	background-color:var(--acc_dd);
 	font-family:Tahoma, Arial, sans-serif;
-	background:linear-gradient(50deg,var(--acc) 50%, var(--gry) 50%);
-	background-size:100vw 100vh;
 	padding:0.5em;
 	margin:0;
-}
-/* slanted stuff container */
-.slant{
-	position:fixed;
-	top:2em;
-	left:50%;
-	display:flex;
-	flex-direction:column;
-	width:var(--content-width);
-	transform:translateX(-50%) skew(var(--skewr));
-	background-color:#000;
-	height:calc(100% - 2em);
-	overflow-y:auto;
-	overflow-x:clip;
-}
-.slant :is(h1,h2,h3,h4,a){
-	transform:skew(calc(-1 * var(--skewr)));
-}
-.slant>fieldset{
-	border-left:none;
-	padding-left:1.5em;
-	padding-right:1.5em;
-}
-/* overlay */
-#overlay{
-	position:fixed;
-	top:2em;
-	left:50%;
-	display:flex;
-	flex-direction:column;
-	transform:translateX(-50%) skew(var(--skewr));
-	height:calc(100% - 2em);
-	pointer-events:none;
-	border-left:solid 50vw var(--acc);
-	border-right:solid 50vw var(--gry);
-	animation:load-in 0.5s normal forwards cubic-bezier(.76,.07,0,1);
-	animation-iteration-count:1;
 }
 /* text stuff */
 h1{
@@ -175,13 +112,13 @@ footer{
 /* buttons */
 .btn{
 	display:inline-flex;
-	vertical-align:middle;
+	justify-content:center;
 	--txt:var(--acc_h);
 	--txt_h:var(--acc_d);
 	--bgc:var(--acc_d);
 	--bgc_h:var(--acc_h);
+	border:none;
 	color:var(--txt);
-	border-color:var(--brd);
 	background-color:var(--bgc);
 	text-decoration:none;
 	padding:0 0.6em;
@@ -193,9 +130,14 @@ footer{
 a.btn{
 	cursor:pointer;
 }
-a.btn:hover{
+button.btn{
+	cursor:pointer;
+	box-sizing:content-box;/*why tf*/
+	font-size:inherit;/*WHY THE FUCK, DO YOU KNOW HOW LONG IT TOOK ME TO FIND THIS???*/
+}
+a.btn:hover,
+button.btn:hover{
 	color:var(--txt_h);
-	border-color:var(--brd_h);
 	background-color:var(--bgc_h);
 }
 /* heterogenous bilateral button */
