added 'load more' button to song list (not working yet)

--- a/html/style/music.css
+++ b/html/style/music.css
@@ -12,6 +12,10 @@ body{
 .btn.play>svg>path{
 	transition:d 0.25s;
 }
+#loadmore{
+	display:flex;
+	justify-content:center;
+}
 /* track list */
 #tracks{
 	display:grid;
