--- a/html/style/play.css
+++ b/html/style/play.css
@@ -1,3 +1,4 @@
+/* navigation & song title bar */
 #play_nav{
 	display:flex;
 	width:100%;
@@ -16,4 +17,50 @@
 }
 #play_nav>div:last-child{
 	align-items:end;
+}
+#play_nav>div>h2{
+	background-color:var(--acc_d);
+	margin-bottom:0.25em;
+	padding:0.25em 0.5em;
+	border-radius:0.25em;
+}
+/* container with the rest of the content, split up in three sections */
+#play_content{
+	display:flex;
+	flex-direction:row-reverse;
+}
+/* info grid */
+#play_info{
+	display:grid;
+	grid-template-columns:auto auto;
+	border-radius:0.25em;
+	overflow:clip;
+	max-width:25%;/*only on horizontal screens*/
+}
+#play_info>:is(span,div){
+	padding:0.25em 0.5em;
+	background-color:var(--acc_d);
+	color:var(--acc_h);
+}
+#play_info>span:nth-child(2n+1){
+	text-align:right;
+	background-color:var(--acc);
+	color:var(--acc_dd);
+	padding-left:0.75em;
+}
+#play_info>span:nth-child(2n){
+	border-left:solid 1px var(--acc_dd);
+}
+#play_info>span:first-child,
+#play_info>span:nth-child(2){
+	padding-top:0.5em;
+}
+#play_info>span:last-of-type{
+	padding-bottom:0.5em;
+}
+#play_info>div{/*comment*/
+	border-top:solid 1px var(--acc_dd);
+	grid-column:1/3;
+	padding:0.5em 0.75em;
+	text-align:justify;
 }
