--- a/html/style/play.css
+++ b/html/style/play.css
@@ -28,6 +28,14 @@
 #play_content{
 	display:flex;
 	flex-direction:row-reverse;
+	justify-content:end;
+	align-items:start;
+}
+#play_content>fieldset{
+	margin-right:1px;
+}
+#play_content>fieldset:first-of-type{
+	margin-right:auto;
 }
 /* info grid */
 #play_info{
@@ -63,4 +71,10 @@
 	grid-column:1/3;
 	padding:0.5em 0.75em;
 	text-align:justify;
+}
+/* column with links to external services which host the song */
+#play_links{
+	display:flex;
+	flex-direction:column;
+	align-items:start;
 }
