--- a/html/style/play.css
+++ b/html/style/play.css
@@ -20,7 +20,6 @@
 }
 #play_nav>div>h2{
 	background-color:var(--acc_d);
-	margin-bottom:0.25em;
 	padding:0.25em 0.5em;
 	border-radius:0.25em;
 }
@@ -33,17 +32,13 @@
 }
 #play_content>fieldset{
 	margin-right:1px;
+	margin-top:0;
 	align-self:stretch;
-}
-#play_content>fieldset:first-of-type{
-	margin-right:auto;
 }
 /* info grid */
 #play_info{
 	display:grid;
 	grid-template-columns:auto auto;
-	border-radius:0.25em;
-	overflow:clip;
 	max-width:25%;/*only on horizontal screens*/
 }
 #play_info>:is(span,div){
@@ -60,26 +55,41 @@
 #play_info>span:nth-child(2n){
 	border-left:solid 1px var(--acc_dd);
 }
-#play_info>span:first-child,
-#play_info>span:nth-child(2){
-	padding-top:0.5em;
+#play_info>span:first-child{
+	padding-top:0.33em;
+	border-top:groove 2px var(--acc);
+}
+#play_info>span:nth-of-type(2){
+	padding-top:0.33em;
+	border-top-right-radius:0.25em;
+}
+#play_info>span:nth-last-of-type(2){
+	padding-bottom:0.33em;
 }
 #play_info>span:last-of-type{
-	padding-bottom:0.5em;
+	padding-bottom:0.33em;
 }
 #play_info>div{/*comment*/
 	border-top:solid 1px var(--acc_dd);
 	grid-column:1/3;
 	padding:0.5em 0.75em;
 	text-align:justify;
+	border-radius:0 0 0.25em 0.25em;
 }
 /* column with links to external services which host the song */
 #play_links{
 	display:flex;
 	flex-direction:column;
 	align-items:start;
+	width:50%;
 }
-/* grid with files and masterplayer */
+/* column with files and masterplayer */
+#play_files{
+	width:80%;
+	display:flex;
+	flex-direction:column;
+	align-items:start;
+}
 #tracks{
 	display:grid;
 	grid-gap:0.25em 0;
