--- a/html/style/play.css
+++ b/html/style/play.css
@@ -39,6 +39,8 @@
 #play_info{
 	display:grid;
 	grid-template-columns:auto auto;
+	border-radius:0 0.25em 0.25em 0.25em;
+	overflow:clip;
 	max-width:25%;/*only on horizontal screens*/
 }
 #play_info>:is(span,div){
@@ -61,7 +63,6 @@
 }
 #play_info>span:nth-of-type(2){
 	padding-top:0.33em;
-	border-top-right-radius:0.25em;
 }
 #play_info>span:nth-last-of-type(2){
 	padding-bottom:0.33em;
@@ -74,7 +75,6 @@
 	grid-column:1/3;
 	padding:0.5em 0.75em;
 	text-align:justify;
-	border-radius:0 0 0.25em 0.25em;
 }
 /* column with links to external services which host the song */
 #play_links{
