--- a/html/style/coding.css
+++ b/html/style/coding.css
@@ -54,6 +54,9 @@
 	border-radius:0.125em;
 	overflow:clip;
 }
+.project>.projectheader>.plinks>a:hover{
+	filter:brightness(1.2);
+}
 .project>.projectheader>.plinks>a+a{
 	margin-left:0.25em;
 }
