--- a/html/style/play.css
+++ b/html/style/play.css
@@ -42,6 +42,7 @@
 	border-radius:0 0.25em 0.25em 0.25em;
 	overflow:clip;
 	white-space:nowrap;
+	flex-grow:0;
 }
 #play_info>:is(span,div){
 	padding:0.25em 0.5em;
@@ -81,17 +82,17 @@
 	display:flex;
 	flex-direction:column;
 	align-items:start;
-	width:50%;
+	flex-grow:5;
 }
 #play_links>.btn{
 	margin-right:0.25em;
 }
 /* column with files and masterplayer */
 #play_files{
-	width:80%;
 	display:flex;
 	flex-direction:column;
 	align-items:start;
+	flex-grow:8;
 }
 #tracks{
 	display:grid;
@@ -138,10 +139,8 @@
 	}
 	#play_files{
 		flex-grow:1;
-		width:auto;
 	}
 	#play_links{
 		display:inline;
-		width:100%;
 	}
 }
