adjusted overlay to work with new navbar style

--- a/html/style/default.css
+++ b/html/style/default.css
@@ -1,7 +1,15 @@
 @keyframes load-in{
-	0%{transform:translateX(-50%) skew(0deg)}
-	50%{width:0%;transform:translateX(-50%) skew(var(--skewr))}
-	100%{width:var(--content-width)}
+	0%{
+		transform:skew(0deg);
+		font-size:0vw;
+	}
+	50%{
+		transform:skew(var(--skewr));
+		font-size:0vw;
+	}
+	100%{
+		font-size:var(--content-width);
+	}
 }
 /* body */
 body{
@@ -270,15 +278,30 @@ a.hebi:hover>img{
 /* overlay */
 #overlay{
 	position:fixed;
-	top:2em;
-	left:50vw;
+	top:2rem;
+	left:-50vw;
 	display:flex;
 	flex-direction:column;
-	transform:translateX(-50%) skew(var(--skewr));
-	height:calc(100% - 2em);
+	transform:skew(var(--skewr));
+	height:calc(100% - 2rem);
+	width:200vw;
 	pointer-events:none;
-	border-left:solid 50vw var(--brn);
-	border-right:solid 50vw var(--gry);
+	font-size:var(--content-width);
+	--lleft:calc(50vw - 0.5em);
+	--left:calc(100vw - 0.5em);
+	--right:calc(100vw + 0.5em);
+	--rright:calc(150vw + 0.5em);
+	background:linear-gradient(to right,
+		var(--acc_dd) 0vw,
+		var(--acc_d) var(--lleft),
+		var(--acc) calc(var(--left) - 0.3rem),
+		var(--acc_d) var(--left),
+		#0000 var(--left),
+		#0000 var(--right),
+		var(--gry_d) var(--right),
+		var(--gry) calc(var(--right) + 0.3rem),
+		var(--gry_d) var(--rright),
+		var(--gry_dd) 200vw);
 	animation:load-in 0.5s normal both cubic-bezier(.76,.07,0,1);
 	animation-iteration-count:1;
 }
