--- a/html/style/default.css
+++ b/html/style/default.css
@@ -208,6 +208,37 @@ footer{
 	--lnk:var(--acc_h);
 	--lnk_h:var(--acc_hh)
 }
+/* text input */
+.input__text{
+	display:inline-block;
+	height:1.2em;
+	--txt:var(--acc_h);
+	--txt_f:var(--acc_dd);
+	--bgc:var(--acc_d);
+	--bgc_f:var(--acc);
+	--brd:var(--acc_h);
+	--brd_f:var(--acc);
+	border:solid 1px var(--brd);
+	color:var(--txt);
+	background-color:var(--bgc);
+	text-decoration:none;
+	padding:0.3em 0.6em;
+	border-radius:0.25em;
+	/*goddamn browser styles*/
+	font-family:inherit;
+	font-size:inherit;
+}
+.input__text:focus{
+	outline:none;
+	box-shadow:none;
+	color:var(--txt_f);
+	background-color:var(--bgc_f);
+	border-color:var(--brd_f);
+}
+.input__text::selection{
+	color:var(--acc_h);
+	background-color:var(--acc_d);
+}
 /* buttons */
 .btn{
 	display:inline-flex;
@@ -230,13 +261,19 @@ footer{
 a.btn{
 	cursor:pointer;
 }
-button.btn{
+button.btn,
+input[type="submit"].btn{
 	cursor:pointer;
 	box-sizing:content-box;/*why tf*/
 	font-size:inherit;/*WHY THE FUCK, DO YOU KNOW HOW LONG IT TOOK ME TO FIND THIS???*/
+	font-family:inherit;
+}
+input[type="submit"].btn{
+	font-weight:bold;
 }
 a.btn:hover,
-button.btn:hover{
+button.btn:hover,
+input[type="submit"].btn:hover{
 	color:var(--txt_h);
 	background-color:var(--bgc_h);
 }
