Respect reduced motion preferences

--- a/html/style/default.css
+++ b/html/style/default.css
@@ -11,6 +11,9 @@
 		font-size:var(--content-width);
 	}
 }
+@media (prefers-reduced-motion) {
+    @keyframes load-in {}
+}
 /* body */
 body{
 	/*	color legend:
